# zerf-work-time-tracking

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Caddyfile  Dockerfile  README.md  SECURITY.md  docker-compose.yml  start_local.sh  start_local_debug.sh  start_public.sh
.github/: dependabot.yml
.github/workflows/: audit.yml  auto-merge-deps.yml  build-push-image.yml  ci.yml  (+1 more)
Wakiga/: KitaZeit.html  data.jsx  icons.jsx  lead-admin.jsx  screens.jsx  shared.jsx  time-entry.jsx  tokens.css
backend/: Cargo.toml
backend/migrations/: 001_initial.sql  002_holiday_country_region.sql  002_multi_approver.sql  002_schema_fixes.sql  002_security.sql  003_absence_cancellation_pending.sql  003_non_admin_approver.sql  003_password_reset.sql  003_reopen_notifications.sql  004_approval_reminder_index.sql  004_notifications_unique_reminder.sql  005_annual_leave_table.sql  005_user_delete_fks.sql  006_fix_reopen_request_fk.sql  007_user_workdays_per_week.sql  008_flextime_reduction_types.sql  009_submission_reminder_dedupe_key.sql  010_add_assistant_role.sql  011_system_metadata.sql  012_drop_change_requests.sql
backend/src/: absences.rs  approval_reminders.rs  audit.rs  auth.rs  categories.rs  change_requests.rs  config.rs  db.rs  email.rs  error.rs  holidays.rs  i18n.rs  lib.rs  main.rs  notifications.rs  reopen_requests.rs  reports.rs  roles.rs  settings.rs  submission_reminders.rs  time_calc.rs  time_entries.rs  users.rs
backend/src/repository/: absences.rs  audit.rs  categories.rs  change_requests.rs  holidays.rs  mod.rs  notifications.rs  reopen_requests.rs  reports.rs  sessions.rs  settings.rs  time_entries.rs  users.rs
backend/tests/: integration.rs  nager_contract.rs
backend/tests/common/: mod.rs
backend/tests/integration/: absences.rs  admin.rs  auth.rs  carryover.rs  change_requests.rs  full_suite.rs  helpers.rs  main.rs  notifications.rs  reopen.rs  reports.rs  start_date.rs  submission_reminders.rs  team_settings.rs  time_entries.rs  users.rs
docker/: Caddyfile.Dockerfile  Dockerfile  docker-compose-http.yml  docker-compose-https.yml  docker-compose-local-debug.yml  docker-compose-local.yml  docker-compose-public.yml
docs/: user-guide.md
frontend/: app.css  app.js  eslint.config.js  index.html  package-lock.json  package.json  vite.config.js
plans/: reopen-week-feature.md  reports-redesign.md
scripts/: api_test.sh  backup.sh  browser_test.js
tests/: run.sh
(+57 files in other folders)
