[package]
name = "kitazeit"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower = { version = "0.4", features = ["limit", "timeout"] }
tower-http = { version = "0.6", features = ["fs", "trace", "cors", "limit", "timeout", "set-header"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "sqlite", "chrono", "macros", "migrate"] }
chrono = { version = "0.4", features = ["serde"] }
argon2 = "0.5"
rand = "0.10"
subtle = "2"
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
thiserror = "1"
hex = "0.4"
async-trait = "0.1"
cookie = "0.18"
csv = "1"

[profile.release]
strip = true
lto = "thin"
